# API_COM_TDD

./: pyproject.toml
store/: main.py
store/core/: config.py
